force-app/main/default/objects/TableConfig__mdt/fields/BaseQuery__c.field-meta.xml
<CustomField>
    <fullName>BaseQuery__c</fullName>
    <description>Base Query used LWC data table</description>
    <label>Base Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>