force-app/main/default/objects/TableConfig__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <description>Columns of LWC data table</description>
    <label>Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>