force-app/main/default/objects/TableConfig__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Object API Name for the LWC data table component</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>