force-app/main/default/objects/TableConfig__mdt/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>Options used LWC data table component</description>
    <label>Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>