force-app/main/default/objects/TableConfig__mdt/fields/ParentField__c.field-meta.xml
<CustomField>
    <fullName>ParentField__c</fullName>
    <description>ParentField for LWC data table component</description>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>