force-app/main/default/objects/TableConfig__mdt/fields/Per_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Per_Page_Size__c</fullName>
    <description>Per Page Size in the Data Table</description>
    <label>Per Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>