force-app/main/default/objects/TableConfig__mdt/fields/WhereConditions__c.field-meta.xml
<CustomField>
    <fullName>WhereConditions__c</fullName>
    <description>WhereConditions LWC data table component</description>
    <label>Where Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>